Switch to run build_kernel.sh at runtime
Signed-off-by: Tuan T. Pham <tuan@vt.edu>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,8 @@ services:
       - ${BUILD_OUTPUT}:/build_output
       - ${OLD_CONFIG}:/old_config:ro
       - /etc/passwd:/etc/passwd:ro
+      - ./scripts/build_kernel.sh:/entrypoint.sh
     # this is the 1st user in Debian/Ubuntu
     user: "1000:1000"
+    entrypoint:
+      - /entrypoint.sh
