--- a/default_settings.env
+++ b/default_settings.env
@@ -2,6 +2,8 @@
 # To be used in future in case we need to check out the source at build time
 KERNEL_SRC_URL=git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git
 
+# 4.9, 5.4, 6.3, 8.2, latest
+GCC_VERSION=5.4
 KERNEL_SRC=/home/tuan/src/linux
 BUILD_OUTPUT=/tmp
-OLD_CONFIG=/boot/config-4.15.18
+OLD_CONFIG=/boot/config-4.18.10
