--- a/default_settings.env
+++ b/default_settings.env
@@ -4,6 +4,6 @@ KERNEL_SRC_URL=git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable
 
 # 4.9, 5.4, 6.3, 8.2, latest
 GCC_VERSION=5.4
-KERNEL_SRC=/home/tuan/src/linux
+KERNEL_SRC=/src/linux
 BUILD_OUTPUT=/tmp
 OLD_CONFIG=/boot/config-4.18.10
